# MagicCamera

Project-AndroidStudio/: build.gradle
Project-AndroidStudio/app/: build.gradle
Project-AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
Project-AndroidStudio/magicfilter/: build.gradle
Project-AndroidStudio/magicfilter/src/main/jni/: CMakeLists.txt
